# vaql_example

./: README.md  pyproject.toml
src/csv_vaql_browser/: __init__.py  app_context.py  busy_dialog.py  filter_line_edit.py  main.py  main_window.py  settings_dialog.py
src/csv_vaql_browser/csv_ui/: __init__.py  csv_data_frame.py  csv_table_view.py
src/csv_vaql_browser/example/: main_example.py
src/csv_vaql_browser/menus/: __init__.py  file_menu.py  help_menu.py  menu_bar.py
src/csv_vaql_browser/panels/: __init__.py  bottom_panel.py  main_panel.py  top_panel.py  vaql_filter.py  vaql_input_panel.py
src/csv_vaql_browser/tools/: app_config.py  app_persist.py  app_state.py  err.py  geometry_helpers.py  io.py  linked_list.py  linked_to_ll_node.py  panel_widget.py  recenetly_opened_files.py  thread_messages.py
